Prevent bookmark-tiles overflowing styling

--- a/DashBoard/src/app/bookmarks/bookmarks.component.scss
+++ b/DashBoard/src/app/bookmarks/bookmarks.component.scss
@@ -1,5 +1,6 @@
 .bookmarks-wrapper {
     height: 100%;
+    overflow-y: auto;
     // background-color: wheat;
 }
 
@@ -7,6 +8,7 @@
     display: flex;
     gap: 20px;
     justify-content: center;
+    flex-wrap: wrap;
 }
 
 
